# data-mining-sdk

./: .coveragerc  .cursorrules  CONTRIBUTING.md  MasterPlan.md  README.md  TODO.md  __init__.py  browser.py  debug_imports.py  demo.py  full_demo_output.txt  pyproject.toml  pytest.ini  scraper_overview.md  smoke_test.py  test_article_extractor.py  test_context_compatibility.py  test_ddg_enhanced_artificial_intelligence.json  test_ddg_enhanced_bitcoin_rally.json  web_search_sdk_demo.ipynb
.github/workflows/: ci.yml
GrandPlan/: MasterPlan.md  Progress_Report_v0.2.0.md  notebook_revamp_consolidated.md
archive/: demo.ipynb  demo.py  demo_notebook_v2_draft.py  demo_v2.ipynb
archive/demo_generator/: convert_demo.py  run_demo.py
archive/planning/: notebook_audit_current.md  notebook_outline_v2.md
docs/: CHEATSHEET.md  MasterPlan.md  Sentiment Analysis Research Doc.md  TwitterScraper.md  demo.ipynb  demo_notebook_draft.py  demo_notebook_v2_draft.py  demo_v2.ipynb  new_dev_kickoff_plan.md  notebook_revamp_plan.md  notebook_revamp_requirements.md  repo_plans.md
scrapers/: __init__.py  base.py  google_web.py  google_web_legacy.py  news_legacy.py  related.py  related_legacy.py  wikipedia.py
scripts/: convert_demo.py  run_demo.py
tests/: conftest.py  scratch_ddg_enhanced.py  scratch_e2e.py  scratch_search_enhanced.py  test_article_results.json  test_ddg_dump.py  test_ddg_enhanced_climate_change.json  test_ddg_enhanced_python_programming.json  test_ddg_parser.py  test_enhanced_functions.py  test_network_http.py  test_network_live_google_web.py  test_network_live_scrapers.py  test_unit_browser_playwright_stealth.py  test_unit_google_web_browser_fallback.py  test_unit_google_web_html.py  test_unit_google_web_no_http.py  test_unit_google_web_selenium_path.py
utils/: __init__.py  http.py  http_logging.py  logging.py  rate_limit.py  text.py
web_search_sdk/: __init__.py  browser.py
(+34 files in other folders)
