[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-search-sdk"
version = "0.2.1"
description = "Standalone async scraper & keyword toolkit distilled from legacy Stock-Algorithm project"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Stock Algo Team"}]

dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "pandas>=2.0",
    "yfinance>=0.2.33",
    "pytrends>=4.9",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "structlog>=23.2",
    "playwright>=1.45.0",
    "pydantic>=2.8.0",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4", "pytest-asyncio>=0.21"]
docs = ["pdoc3>=0.10"]
browser = ["selenium>=4.21", "webdriver-manager>=4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["web_search_sdk.*"]

[tool.setuptools.package-data]
"web_search_sdk.resources" = ["*.txt"] 